# factoria

./: .gitignore  .pypirc.example  Makefile  README.md  pyproject.toml
src/factoria/: __ini__.py  base.py  decorators.py  exceptions.py
tests/: test_base.py
