[project]
name = "factoria"
version = "0.1.0"
description = "A Python library to generate one or more Pydantic models with chainable state modifiers."
authors = [
    {name = "Raphael Ramos",email = "raphael.opensource@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
build = "^1.3.0"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
